--- a/src/app/checklist/checklist.component.html
+++ b/src/app/checklist/checklist.component.html
@@ -1,20 +1,31 @@
 <div class="container mx-auto p-4">
   <div class="flex justify-end mb-4">
-    <mat-checkbox (change)="checkAll($event.checked)" class="mr-2">
+    <button mat-button (click)="checkAll(true)" class="mr-2">
       Check All
-    </mat-checkbox>
+    </button>
     <button matButton="outlined" color="warn" (click)="clearAll()">
       Clear All
     </button>
   </div>
   <div *ngFor="let region of regions; trackBy: trackByRegion" class="mb-6">
     <mat-card>
-      <mat-card-header class="cursor-pointer" (click)="toggleRegion(region)">
+      <mat-card-header
+        class="cursor-pointer"
+        (click)="toggleRegion(region)"
+        (keydown.enter)="toggleRegion(region)"
+        tabindex="0"
+        role="button"
+      >
         <mat-card-title>{{ region }}</mat-card-title>
-        <div class="ml-auto flex items-center" (click)="$event.stopPropagation()">
-          <mat-checkbox (change)="checkAllInRegion(region, $event.checked)" class="mr-2">
+        <div
+          class="ml-auto flex items-center"
+          (click)="$event.stopPropagation()"
+          (keydown.enter)="$event.stopPropagation()"
+          tabindex="-1"
+        >
+          <button mat-button (click)="checkAllInRegion(region, true)" class="mr-2">
             Check All
-          </mat-checkbox>
+          </button>
           <button mat-button color="warn" (click)="clearAllInRegion(region)" class="mr-2">
             Clear All
           </button>
@@ -28,12 +39,13 @@
           <div class="flex justify-between items-center">
             <h3 class="mat-subheader">{{ section }}</h3>
             <div *ngIf="groupedChecklist[region][section].length > 1">
-              <mat-checkbox
-                (change)="checkAllInSection(region, section, $event.checked)"
+              <button
+                mat-button
+                (click)="checkAllInSection(region, section, true)"
                 class="mr-2"
               >
                 Check All
-              </mat-checkbox>
+              </button>
               <button
                 matButton="outlined"
                 color="warn"
