--- a/src/app/checklist/checklist.component.html
+++ b/src/app/checklist/checklist.component.html
@@ -82,8 +82,8 @@
         </div>
       </mat-card-header>
       <mat-card-content *ngIf="!regionCollapsedState[region]">
-        <mat-list *ngFor="let section of sections[region]">
-          <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
+        <div *ngFor="let section of sections[region]" class="mb-6">
+          <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-3">
             <h3 class="mat-subheader text-base sm:text-lg font-medium break-words">{{ section }}</h3>
             <div *ngIf="groupedChecklist[region][section].length > 1" class="flex flex-wrap mt-1 sm:mt-0">
               <button
@@ -103,21 +103,23 @@
               </button>
             </div>
           </div>
-          <mat-list-item *ngFor="let item of groupedChecklist[region][section]" class="mb-1">
-            <mat-checkbox
-              [(ngModel)]="item.checked"
-              (ngModelChange)="onCheckboxChange($event, item.id)"
-              class="w-full"
-            >
-              <span class="whitespace-normal text-sm sm:text-base break-words">
+          <div *ngFor="let item of groupedChecklist[region][section]" class="mb-4">
+            <div class="flex items-start">
+              <mat-checkbox
+                [(ngModel)]="item.checked"
+                (ngModelChange)="onCheckboxChange($event, item.id)"
+                class="mt-1"
+              ></mat-checkbox>
+              <div class="ml-2 whitespace-normal text-sm sm:text-base break-words">
                 {{ item.description }}
-                <span class="text-gray-500 text-sm ml-2">
+                <span class="text-gray-500 text-sm ml-1">
                   ({{ item.bullet }})
                 </span>
-              </span>
-            </mat-checkbox>
-          </mat-list-item>
-        </mat-list>
+
+              </div>
+            </div>
+          </div>
+        </div>
       </mat-card-content>
     </mat-card>
   </div>
