--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,4 @@
+<div class="container mx-auto mt-16 text-center">
+  <h1 class="text-2xl sm:text-3xl font-bold">Dormitory Inspection Checklist</h1>
+</div>
 <app-checklist></app-checklist>
